@@ -1,3 +1,8 @@
+2006-03-29  Callum McKenzie  <callum@spooky-possum.org>
+
+	* gnomine.c (main): Patch from Thomas Andersen to upgrade popt to
+	GOption.
+
 2006-02-03  Callum McKenzie  <callum@spooky-possum.org>
 
 	* Makefile.am: Remove the spurious dependence on gstreamer.
